tests/NormalTests/paczka2/big_fuzzy/13945094.err
Error in line 2: xMSrEPRd A966 80,2
Error in line 3: xMSrEPRd A299 32,2
Error in line 12: 54KvrTim A679 89,0
Error in line 20: 8pCPB A484 12,1
Error in line 52: zcRveG2oih A299 99,0
Error in line 58: xMSrEPRd A679 11,8
Error in line 66: xMSrEPRd A299 81,8
Error in line 63: 8pCPB A966 92,7
Error in line 72: 54KvrTim A484 8,6
Error in line 75: 54KvrTim A679 96,7
Error in line 71: 8pCPB A966 26,7
Error in line 73: gVYIWG9b A484 38,3
Error in line 87: 8pCPB A484 91,2
Error in line 93: 8pCPB A299 75,2
Error in line 91: 54KvrTim A299 94,4
Error in line 108: gVYIWG9b A966 -1,1
Error in line 109: 8pCPB A679 55,0
Error in line 97: gVYIWG9b A966 87,2
Error in line 122: A966 A299 7,5
Error in line 124: A966 A966 43,3
Error in line 127: A966 A679 79,7
Error in line 131: gVYIWG9b A484 65,0
Error in line 117: TN7L4x0Jtet A484 65,9
Error in line 135: 8pCPB A966 2,2
Error in line 146: TN7L4x0Jtet A679 110,4
Error in line 142: gVYIWG9b A966 85,7
Error in line 159: A966 A966 24,5
Error in line 147: xMSrEPRd A484 22,7
Error in line 176: 8pCPB A484 897,9
Error in line 179: 8pCPB A679 69,8
Error in line 180: gVYIWG9b A679 44,3
Error in line 191: zcRveG2oih A679 25,5
Error in line 183: 8pCPB A484 20,5
Error in line 197: 54KvrTim A679 19,1
Error in line 208: xMSrEPRd A484 30,6
Error in line 212: 54KvrTim A679 52,2
Error in line 226: xMSrEPRd A484 60,0
Error in line 232: xMSrEPRd A679 35,2
Error in line 235: xMSrEPRd A299 68,7
Error in line 239: xMSrEPRd A966 26,5
Error in line 240: xMSrEPRd A679 47,9
Error in line 241: zcRveG2oih A299 83,8
Error in line 249: TN7L4x0Jtet A679 93,52
